[package]
name = "generic-filesystem"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
aws-sdk-s3 = {version = "*", optional = true}
aws-config = {version = "1.1.4", optional = true}

[features]
aws-s3 = ["aws-sdk-s3", "aws-config"]
